<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="tv_tituloLogIn">Log In</string>
    <string name="et_UsuarioLogIn">Usuario</string>
    <string name="et_ContraLogIn">Contraseña</string>
    <string name="bt_registrarLogIn">Registrarse</string>
    <string name="bt_Entrar">Entrar</string>
    <string name="tv_titulo">Registro de usuarios</string>
    <string name="et_documento">DOCUMENTO</string>
    <string name="et_usuario">USUARIO</string>
    <string name="et_nombres">NOMBRES</string>
    <string name="et_apellidos">APELLIDOS</string>
    <string name="et_contra">CONTRASEÑA</string>
    <string name="bt_registrar">Registrar</string>
    <string name="bt_buscar">Buscar</string>
    <string name="bt_listar_registros">Log in</string>
    <string name="tvTitulo2"> Finanzas Personales </string>
    <string name="btnIngresos"> Ingresos </string>
    <string name="btnGastos"> Gastos </string>
    <string name="btnTipsFinan"> Tips Financieros </string>
    <string name="btnCalendario"> Calendario </string>
    <string name="imgPrincipal"></string>
    <string name="tvBienvenido">Bienvenido</string>
    <string name="volver">Log in</string>
</resources>